Fix collapse button issue

--- a/assets/scss/organisms/text/_faqs.scss
+++ b/assets/scss/organisms/text/_faqs.scss
@@ -15,7 +15,7 @@
         }
     }
 
-    .question {
+    .question-button {
         width: 100%;
         text-align: left;
         align-items: center;
